--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ body {
 header {
     width: 100%;
     height: 50px;
-    
 }
 
 /* Main */
@@ -24,18 +23,51 @@ main {
 
 .explanation-position {
     width: 100%;
+    height: 20px;
+    margin: 50px 0;
+}
+
+/* First explanation */
+
+.first-disclaimer-father {
+    height: 100px;
+    border: 4px solid black;
+    position: relative;
+}
+
+.title {
+    font-weight: bold;
+    margin: 5px;
+}
+
+.second.title {
+    font-size: 10px;
+}
+
+.first-child {
+    margin: 20px 0;
+    border: 4px solid lightcoral;
+    width: 100px;
     height: 100px;
 }
 
-/* Sextion item-a-r */
+.second-child {
+    margin: 20px 0;
+    border: 4px solid lightseagreen;
+    width: 75px;
+    height: 75px;
+}
+
+/* Second explanation */
 
 .item-a-r {
+    margin: 20px;
     border: 4px solid yellow;
     position: relative;
 }
 
 .box-name.main-name {
-    color: yellow;
+    color: #757500;
     right: 50%;    
 }
 
