--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: whitesmoke;
 }
 
@@ -18,13 +18,34 @@ main {
 .page-title {
     font-size: 24px;
     font-weight: bold;
-    margin: 24px 0;
+    margin: 10px 0;
 }
 
 .explanation-position {
     width: 100%;
-    height: 20px;
-    margin: 50px 0;
+    height: 100px;
+    margin: 30px 0;
+    position: relative;
+}
+
+.code {
+    position: relative;
+    margin: 10px 0;
+}
+
+.code-father {
+    padding: 15px 0 15px 15px;
+    position: absolute;
+    width: 300px;
+    background-color: #cccccc;
+    color: rgb(0, 0, 0);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    border-radius: 9px;
+}
+
+.code-css {
+
 }
 
 /* First explanation */
