--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ header {
 main {
     width: 940px;
     margin: 0 auto;
+    position: relative;
 }
 
 .page-title {
@@ -42,10 +43,6 @@ main {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
     border-radius: 9px;
-}
-
-.code-css {
-
 }
 
 /* First explanation */
@@ -81,6 +78,13 @@ main {
 
 /* Second explanation */
 
+.explanation-position2 {
+    width: 100%;
+    height: 30px;
+    margin: 30px 0;
+    position: relative;
+}
+
 .item-a-r {
     margin: 20px;
     border: 4px solid yellow;
@@ -90,6 +94,7 @@ main {
 .box-name.main-name {
     color: #757500;
     right: 50%;    
+    transform: translateX(50%);
 }
 
 .box-name {
@@ -144,4 +149,21 @@ main {
 
 .box-name.right {
     right: 0;
+}
+
+/* Footer */
+
+footer {
+    bottom: 0;
+    position: relative;
+}
+
+footer div {
+    height: 30px;
+    position: absolute;
+}
+
+footer div a {
+    text-decoration: none;
+    color: black;
 }
