--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: whitesmoke;
+    position: relative;
+    min-height: 100%;
+    min-height: 100vh;
 }
 
 header {
@@ -12,8 +15,9 @@ header {
 
 main {
     width: 940px;
-    margin: 0 auto;
+    margin: 0 auto 30px;
     position: relative;
+    padding-bottom: 20px;
 }
 
 .page-title {
@@ -43,6 +47,7 @@ main {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
     border-radius: 9px;
+    line-height: 20px;
 }
 
 /* First explanation */
@@ -85,82 +90,19 @@ main {
     position: relative;
 }
 
-.item-a-r {
-    margin: 20px;
-    border: 4px solid yellow;
-    position: relative;
-}
-
-.box-name.main-name {
-    color: #757500;
-    right: 50%;    
-    transform: translateX(50%);
-}
-
-.box-name {
-    position: absolute;
-    color: blueviolet;
-    font-weight: bold;
-    font-size: 24px;
-    margin: 2px;
-}
-
-.box.left {
-    width: 200px;
-    height: 200px;
-    background-color: darkturquoise;
-    border: 4px green solid;
-    position: relative;
-}
-
-.box.left-content {
-    width: 75px;
-    height: 75px;
-    background-color: darkred;
-    border: 4px solid blue;
-    position: absolute;
-    right: 0;
-}
-
-.box-name.left-name {
-    
-}
-
-/* box-right */
-
-.box.right {
-    width: 200px;
-    height: 200px;
-    background-color: darkturquoise;    
-    position: absolute;
-    border: 4px green solid;
-    right: 0;
-    top: 0;
-}
-
-.box.right-content {
-    width: 75px;
-    height: 75px;
-    background-color: darkred;
-    border: 4px solid blue;
-    position: absolute;
-    left: 0;
-}
-
-.box-name.right {
-    right: 0;
-}
-
 /* Footer */
 
 footer {
+    width: 100%;
+    position: absolute;
     bottom: 0;
-    position: relative;
+    height: 30px;
 }
 
 footer div {
-    height: 30px;
     position: absolute;
+    right: 50%;
+    transform: translateX(50%);
 }
 
 footer div a {
