--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,27 @@ body {
 }
 
 header {
-    width: 100%;
     height: 50px;
+    width: 940px;
+    margin: 0 auto;
+    position: relative;
+}
+
+header div {
+    position: absolute;
+    left: 0;
+    height: 40px;
+    width: 40px;
+    margin: 10px 0;
+}
+
+header a {
+    
+}
+
+header div img {
+    height: 40px;
+    width: 40px;
 }
 
 /* Main */
