--- a/css/style.css
+++ b/css/style.css
@@ -35,74 +35,83 @@ main {
     padding-bottom: 20px;
 }
 
+main p {
+    line-height: 20px;
+}
+
 .page-title {
     font-size: 24px;
     font-weight: bold;
     margin: 10px 0;
 }
 
+.secundary-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
 .explanation-position {
     width: 100%;
-    height: 100px;
+    height: 300px;
     margin: 30px 0;
-    position: relative;
+}
+
+.text-container {
+    width: 100%;
+    margin: 30px 0;
 }
 
 .code {
-    position: relative;
     margin: 10px 0;
 }
 
 .code-father {
     padding: 15px 0 15px 15px;
-    position: absolute;
-    width: 300px;
+    width: 400px;
     background-color: #cccccc;
     color: rgb(0, 0, 0);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
     border-radius: 9px;
-    line-height: 20px;
+    line-height: 5px;
+    white-space: pre;
 }
 
-/* First explanation */
+/* First explanation block */
 
-.first-disclaimer-father {
-    height: 100px;
-    border: 4px solid black;
+.main-name {
+    position: absolute;
+    right: 50%;
+    transform: translateX(50%);
+}
+
+.main-name.child {
+    font-size: 11px;
+}
+
+.main-father {
     position: relative;
-}
-
-.title {
-    font-weight: bold;
-    margin: 5px;
-}
-
-.second.title {
-    font-size: 10px;
-}
-
-.first-child {
-    margin: 20px 0;
-    border: 4px solid lightcoral;
-    width: 100px;
-    height: 100px;
-}
-
-.second-child {
-    margin: 20px 0;
-    border: 4px solid lightseagreen;
-    width: 75px;
-    height: 75px;
-}
-
-/* Second explanation */
-
-.explanation-position2 {
     width: 100%;
-    height: 30px;
-    margin: 30px 0;
-    position: relative;
+    height: 200px;
+    border: 4px solid black;
+    background-color: #b3baff;
+}
+
+.main-child {
+    position: absolute;
+    width: 192px;
+    height: 192px;
+    border: 4px solid blueviolet;
+    background-color: wheat;
+}
+
+.main-child-2 {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border: 4px solid saddlebrown;
+    background-color: tomato;
 }
 
 /* Footer */
