--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ main p {
     height: 200px;
     border: 4px solid black;
     background-color: #b3baff;
+    margin: 30px 0;
 }
 
 .main-child {
@@ -127,6 +128,7 @@ footer div {
     position: absolute;
     right: 50%;
     transform: translateX(50%);
+    padding-top: 10px;
 }
 
 footer div a {
