--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ main p {
     line-height: 20px;
 }
 
-.page-title {
+.title-master {
     font-size: 24px;
     font-weight: bold;
     margin: 10px 0;
@@ -63,7 +63,7 @@ main p {
 }
 
 .code {
-    margin: 10px 0;
+    margin: 30px 0;
 }
 
 .code-father {
