--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,15 @@ main p {
     white-space: pre;
 }
 
+.code-father.small {
+    width: 150px;
+    margin: 10px;
+}
+
+.code.code-absolute {
+    position: absolute;
+} 
+
 /* First explanation block */
 
 .main-name {
@@ -88,6 +97,10 @@ main p {
 
 .main-name.child {
     font-size: 11px;
+}
+
+.main-name.text {
+    position: relative;
 }
 
 .main-father {
@@ -105,6 +118,10 @@ main p {
     height: 192px;
     border: 4px solid blueviolet;
     background-color: wheat;
+}
+
+.main-child.right {
+    right: 0;
 }
 
 .main-child-2 {
